tests/expectations/compiler/structs/member_variable_fail.out
Error [ETYC0372018]: Variable y is not a member of struct Foo {
    x: u32,
}.
    --> compiler-test:9:21
     |
   9 |         let err = a.y;
     |                     ^
